# eigen_offloading_compatibility

./: CMakeLists.txt  README.md  api.cu  api.h  eigen.cpp
